--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
+    <!--  -->
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <!--  -->
+
     <title>Document</title>
 </head>
 <body>
     <header class="header">
         <a href="#" class="logo-link">
-            <img src="img/logo/Logo.png" alt="logo" class="header-logo">
+            <img src="img/icons/Logo.svg" alt="logo" class="header-logo">
         </a>
         <section class="auth-btns">
             <h2 class="visually-hidden">Authentification buttons</h2>
@@ -50,12 +61,14 @@
             </section>
 
             <section class="feautures">
-                <h2 class="feautures-main-title">The majority our customers do not understand their workflows.</h2>
-                <p class="feautures-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2 class="feautures-main-title">The majority our customers do not</br>understand their workflows.</h2>
+                <p class="feautures-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</br>mollit anim id est laborum.</p>
                 <ul class="feautures-items">
 
                     <li class="features-item">
-                        <img class="features-img" src="img/icons/star.svg" alt="star icon">
+                        <span class="features-img-span">
+                            <img class="features-img" src="img/icons/star.svg" alt="star icon">
+                        </span>
                         <h3 class="features-item-title">Instant features</h3>
                         <p class="features-item-content">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.
@@ -63,7 +76,9 @@
                     </li>
 
                     <li class="features-item">
-                        <img class="features-img" src="img/icons/list.svg" alt="list icon">
+                        <span class="features-img-span">
+                            <img class="features-img" src="img/icons/list.svg" alt="list icon">
+                        </span>
                         <h3 class="features-item-title">Instant features</h3>
                         <p class="features-item-content">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.
@@ -71,7 +86,9 @@
                     </li>
 
                     <li class="features-item">
-                        <img class="features-img" src="img/icons/earth_ball.svg" alt="earth icon">
+                        <span class="features-img-span">
+                            <img class="features-img" src="img/icons/earth_ball.svg" alt="earth icon">
+                        </span>
                         <h3 class="features-item-title">Instant features</h3>
                         <p class="features-item-content">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.
@@ -79,7 +96,9 @@
                     </li>
 
                     <li class="features-item">
-                        <img class="features-img" src="img/icons/head.svg" alt="head icon">
+                        <span class="features-img-span">
+                            <img class="features-img" src="img/icons/head.svg" alt="head icon">
+                        </span>
                         <h3 class="features-item-title">Instant features</h3>
                         <p class="features-item-content">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.
@@ -87,7 +106,9 @@
                     </li>
 
                     <li class="features-item">
-                        <img class="features-img" src="img/icons/like_hand.svg" alt="like icon">
+                        <span class="features-img-span">
+                            <img class="features-img" src="img/icons/like_hand.svg" alt="like icon">
+                        </span>
                         <h3 class="features-item-title">Instant features</h3>
                         <p class="features-item-content">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.
@@ -95,7 +116,9 @@
                     </li>
 
                     <li class="features-item">
-                        <img class="features-img" src="img/icons/message_cloud.svg" alt="message-cloud icon">
+                        <span class="features-img-span">
+                            <img class="features-img" src="img/icons/message_cloud.svg" alt="message-cloud icon">
+                        </span>
                         <h3 class="features-item-title">Instant features</h3>
                         <p class="features-item-content">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.
@@ -110,7 +133,7 @@
                     Reach goals that matter
                 </h6>
                 <h2 class="benefits-main-title">One product, unlimited solutions</h2>
-                <p class="benefits-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit laborum — semper quis lectus nulla.</p>
+                <p class="benefits-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</br>deserunt mollit laborum — semper quis lectus nulla.</p>
                 <ul class="benefits-items">
 
                     <li class="benefits-item">
@@ -140,9 +163,9 @@
                     </li>
 
                     <li class="benefits-item">
-                        <ul class="benefit-inner-elements">
+                        <ul class="benefit-inner-elements rw-revrs">
 
-                            <li class="benefit-element-description">
+                            <li class="benefit-element-description li-rw-revrs">
                                 <h6 class="benefit-description-undertitle">
                                     More speed Less spend
                                 </h6>
@@ -197,7 +220,7 @@
             <section class="reviews">
 
                 <h2 class="reviews-main-title">Don't take our word for it</h2>
-                <p class="reviews-main-content">Vitae aliquet nec ullamcorper sit amet risus nullam eget felis semper quis lectus nulla at volutpat diam ut venenatis tellus—in ornare.</p>
+                <p class="reviews-main-content">Vitae aliquet nec ullamcorper sit amet risus nullam eget felis semper quis lectus</br>nulla at volutpat diam ut venenatis tellus—in ornare.</p>
 
                 <ul class="reviews-items">
 
@@ -206,7 +229,7 @@
                             <img src="img/icons/quote.svg" alt="quote image" class="abslt-quote-img">
                             <img src="img/images/anastasia_image.png" alt="reviewer icon" class="reviewer-icon">
                             <p class="reviewer-feedback">— Open PRO lets me quickly get the insights I care about so that I can focus on my productive work. I've had Open PRO for about 24 hours now and I honestly don't know how I functioned without it before.</p>
-                            <cite>
+                            <cite class="person-cite">
                                 Anastasia Dan / <span>UX Board</span>
                             </cite>
                         </blockquote>
@@ -217,7 +240,7 @@
                             <img src="img/icons/quote.svg" alt="quote image" class="abslt-quote-img">
                             <img src="img/images/roman_image.png" alt="reviewer icon" class="reviewer-icon">
                             <p class="reviewer-feedback">— Open PRO lets me quickly get the insights I care about so that I can focus on my productive work. I've had Open PRO for about 24 hours now and I honestly don't know how I functioned without it before.</p>
-                            <cite>
+                            <cite class="person-cite">
                                 Roman Level / <span>AppName</span>
                             </cite>
                         </blockquote>
@@ -228,7 +251,7 @@
                             <img src="img/icons/quote.svg" alt="quote image" class="abslt-quote-img">
                             <img src="img/images/akex_image.png" alt="reviewer icon" class="reviewer-icon">
                             <p class="reviewer-feedback">— Open PRO lets me quickly get the insights I care about so that I can focus on my productive work. I've had Open PRO for about 24 hours now and I honestly don't know how I functioned without it before.</p>
-                            <cite>
+                            <cite class="person-cite">
                                 Akex Sackett / <span>Reform Layouts</span>
                             </cite>
                         </blockquote>
@@ -268,7 +291,7 @@
 
                     <li class="other-info-description-item">
                         <a href="#" class="logo-link">
-                            <img src="img/logo/Logo.png" alt="logo" class="other-info-logo">
+                            <img src="img/icons/Logo.svg" alt="logo" class="other-info-logo">
                         </a>
                         <p class="other-info-content">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
                     </li>
