Created script.js. Added some own styles and events to scrollbar.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Head -->
 
     <!-- Body -->
-    <body>
+    <body id="body">
 
         <!-- Header -->
         <header class="header">
@@ -521,7 +521,7 @@
 
         </footer>
         <!--  -->
-
+    <script src="js/script.js"></script>
     </body>
     <!--  -->
 
