Fixed some semantic failures in index.html

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
                 <!-- Section short-offer-description -->
                 <section class="short-offer-description">
-                    <h1 class="short-description-title">Landing template for startups</h1>
-                    <p class="short-description-content">Our landing page template works on all devices, so you only have to</br>set it up once, and get beautiful results forever.</p>
+                    <h2 class="short-description-title">Landing template for startups</h2>
+                    <p class="short-description-content">Our landing page template works on all devices, so you only have to<br>set it up once, and get beautiful results forever.</p>
                     <ul class="description-links">
                         <li class="description-link">
                         <a href="#" class="link-trial">
@@ -89,8 +89,8 @@
 
                 <!-- Section feautures -->
                 <section class="feautures">
-                    <h2 class="feautures-main-title">The majority our customers do not</br>understand their workflows.</h2>
-                    <p class="feautures-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</br>mollit anim id est laborum.</p>
+                    <h2 class="feautures-main-title">The majority our customers do not<br>understand their workflows.</h2>
+                    <p class="feautures-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt<br>mollit anim id est laborum.</p>
 
                     <!-- Features items -->
                     <ul class="feautures-items">
@@ -179,7 +179,7 @@
                         Reach goals that matter
                     </h6>
                     <h2 class="benefits-main-title">One product, unlimited solutions</h2>
-                    <p class="benefits-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</br>deserunt mollit laborum — semper quis lectus nulla.</p>
+                    <p class="benefits-main-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br>deserunt mollit laborum — semper quis lectus nulla.</p>
 
                     <!-- Benefits items -->
                     <ul class="benefits-items">
@@ -278,7 +278,7 @@
                 <section class="reviews">
 
                     <h2 class="reviews-main-title">Don't take our word for it</h2>
-                    <p class="reviews-main-content">Vitae aliquet nec ullamcorper sit amet risus nullam eget felis semper quis lectus</br>nulla at volutpat diam ut venenatis tellus—in ornare.</p>
+                    <p class="reviews-main-content">Vitae aliquet nec ullamcorper sit amet risus nullam eget felis semper quis lectus<br>nulla at volutpat diam ut venenatis tellus—in ornare.</p>
 
                     <!-- Reviews items -->
                     <ul class="reviews-items">
