Added adaptive up to 280px

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h2 class="visually-hidden">Video</h2>
 
                     <!-- Video -->
-                    <video poster="img/images/video_poster.png">
+                    <video class="video-element" poster="img/images/video_poster.png">
                         <source src="videos/video.mp4">
                     </video>
                     <!--  -->
