Added title to page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
         <!--  -->
 
-        <title>Document</title>
+        <title>Tailwind_Landing_Page</title>
     </head>
     <!-- Head -->
 
